fixing issue where leaderboard loading causes video and header overlap. normalizing video spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,6 +18,7 @@
 
 .header-ad ins.leaderboard:empty {
   width: 100%;
+  height: 98px;
 }
 
 pre.shiki.github-dark,
